# daraz-product-scraper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
data/output/: products.json  scrape.json  scrape_metadata.json  test.json  test_metadata.json
data/samples/: search_page.html
src/daraz_scraper/: __init__.py  browser.py  cli.py  client.py  collector.py  constants.py  exceptions.py  exporter.py  inspect.py  logging_config.py  models.py  pagination.py  parser.py  search.py
tests/: test_browser.py  test_cli.py  test_client.py  test_exporter.py  test_pagination.py  test_parser.py  test_search.py
