[project]
name = "daraz-product-scraper"
version = "0.1.0"
description = "A modern, modular Playwright-powered scraper for Daraz."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Akber The Great" }
]

keywords = [
    "daraz",
    "scraper",
    "playwright",
    "web-scraping",
    "ecommerce",
    "python",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

dependencies = [
    "playwright>=1.53",
    "beautifulsoup4>=4.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.12",
]

[project.urls]
Homepage = "https://github.com/akberthegreat2/daraz-product-scraper"
Repository = "https://github.com/akberthegreat2/daraz-product-scraper"
Issues = "https://github.com/akberthegreat2/daraz-product-scraper/issues"

[project.scripts]
daraz-scraper = "daraz_scraper.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]